# wireframe

./: .env  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  worfklow.md
.claude/: settings.local.json
.github/workflows/: ci.yml
architecture/: adding_features.md
architecture/legacy/: README.md  mypy.ini  pyproject.toml
architecture/legacy/autopcb/: core.py  sexpr.py
architecture/legacy/wireframe/: config.py  main.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sheet.json  test.py
backend/alembic/: env.py
backend/alembic/versions/: 2026-01-22_test_connection.py
backend/app/: __init__.py  admin.py  config.py  main.py
backend/app/agents/: assistant.py  constants_miner.py  equation_extractor.py  executor.py  hitl_node.py  ingestion_supervisor.py  math_engineer.py  vision_agent.py
backend/app/api/: deps.py
backend/app/api/middleware/: error_handler.py  tracing.py
backend/app/api/routes/: analyze.py  artifacts.py  jobs.py  resume.py
backend/app/api/routes/v1/: __init__.py  agent.py
backend/app/api/v1/: chips.py  datasheets.py
backend/app/clients/: digikey.py
backend/app/core/: cache.py  checkpointer.py  config.py  exceptions.py  graph_builder.py  graph_state.py  models.py  queue.py  worker.py
backend/app/core/clients/: __init__.py  cache.py  digikey.py  ul.py
backend/app/core/tasks/: ingestion.py
backend/app/db/models/: __init__.py
backend/app/models/: database.py  schemas.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  chunking.py  database.py  e2b_client.py  kicad_generator.py  pdf_parser.py  semantic_router.py  storage.py
backend/app/utils/: embeddings.py  logging.py
backend/autopcb/: exceptions.py  models.py  sexpr.py  utils.py
backend/autopcb/datatypes/: mixins.py  pcb.py  schematics.py  templates.py
backend/autopcb/layout/: autoplacement.py  delaunator.py
backend/autopcb/parsers/altium/: constructs.py  converters.py  core.py  enums.py  mappings.py  readers.py  utills.py
backend/autopcb/parsers/altium/fields/: __init__.py  arcs.py  board.py  classes.py  component_bodies.py  components.py  dimensions.py  extended_primitive_information.py  fills.py  models.py  nets.py  pads.py  polygons.py  regions.py  rules.py  shape_based_regions.py  texts.py  tracks.py  vias.py
backend/autopcb/parsers/kicad/: parser.py  sexpr.py
backend/cli/: commands.py
backend/scripts/: generate_fixture.py
backend/tests/: conftest.py  test_admin.py  test_core.py
backend/wireframe/: db.py  main.py  worker.py
backend/wireframe/agents/: core.py  nodes.py  state.py  workflow.py
backend/wireframe/api/auth/: router.py
backend/wireframe/api/chips/: router.py
backend/wireframe/api/chips/providers/: digikey.py  digikey_parameter_mapping.json  ul.py
backend/wireframe/api/ingestor/: router.py
backend/wireframe/api/jobs/: router.py
backend/wireframe/services/: llm.py  parser.py  storage.py
backend/wireframe/utils/: agent.py  security.py
frontend/: .env  .env.prod.example  AUTH_DEBUG.md  AUTH_SETUP.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  bun.lockb  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx  UserMenu.tsx
frontend/src/hooks/: use-auth.ts  use-chat.ts  use-local-chat.ts  use-websocket.ts
frontend/src/lib/: api-client.ts  api-eda-legacy.ts  api-eda.ts  constants.ts  mockData.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  DesignDetail.tsx  Index.tsx
frontend/src/stores/: auth-store.ts  chat-sidebar-store.ts  (+4 more)
proxy/: Caddyfile  railpack.json
src/: App.tsx
src/components/: DesignCard.tsx  ProtectedRoute.tsx  UploadZone.tsx  UserMenu.tsx
src/contexts/: AuthContext.tsx
src/lib/: mockData.ts
src/pages/: Auth.tsx  Dashboard.tsx  DesignDetail.tsx
supabase/: config.toml
(+23 files in other folders)
